add some swagger docs
